--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?hcvtdoy#1" target="_blank">首页</a> | <a href="https://db8nk66phkh66.cloudfront.net/1?mifwkhmxt" target="_blank">动态网</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/2?exiiltvn" target="_blank">大纪元</a> | <a href="https://dwpf34pf0p4a8.cloudfront.net/4?jrngwpxgt" target="_blank">看中国</a> | <a href="https://d5tsat6yropq6.cloudfront.net/pHh5q?rpdpizqw" target="_blank">新生网</a> | <a href="https://dlp02mn13eakq.cloudfront.net/tktpt?omecu" target="_blank">阿波罗网</a> | <a href="https://d2184d78prq5kd.cloudfront.net/Mjpvu?resceisyd" target="_blank">干净世界</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/10?hqcjstpf" target="_blank">退党服务</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/Rffqf?abvtdr" target="_blank">明慧广播</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/nw9Vn?dgcnjyb" target="_blank">传奇时代</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/AF9AG?kyzxryra" target="_blank">新境界影视</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/zqMQA?nyveihuvq" target="_blank">文昭谈论</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/7?qaaduhz" target="_blank">明慧</a></p><p><a href="https://d3a3umoypakbtm.cloudfront.net/9?oxtrlza" target="_blank">大法</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/3?gfdbiyt" target="_blank">新唐人</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/obAhT?wfhcfca" target="_blank">人民报</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/xXNHu?lnnbce" target="_blank">放光明</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/5?nhbnpwnb" target="_blank">新纪元</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/6?fvvpceye" target="_blank">希望之声</a> | <a href="https://d78f5frq5siq8.cloudfront.net/11?bqkfnbp" target="_blank">无界网络</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/Pueji?zpturgtc" target="_blank">追查国际</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/16?qzoit" target="_blank">明慧之窗</a> | <a href="https://duxu97yt14q37.cloudfront.net/LdvzZ?meeekf" target="_blank">细语人生</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/fBn3r?dbpor" target="_blank">新世纪影视</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/PUWMb?ysgrlaca" target="_blank">江峰时刻</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/8?oysaqzge" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?zqswmemv#1" target="_blank">首页</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/1?yqrydunp" target="_blank">动态网</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/2?cpntlcjue" target="_blank">大纪元</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/4?ujyemuea" target="_blank">看中国</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/pHh5q?tzyhyg" target="_blank">新生网</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/tktpt?ecefug" target="_blank">阿波罗网</a> | <a href="https://d282b678eon3c.cloudfront.net/Mjpvu?kgaqz" target="_blank">干净世界</a> | <a href="https://dmepc9x6zy689.cloudfront.net/10?onjrr" target="_blank">退党服务</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/Rffqf?kzgjgu" target="_blank">明慧广播</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/nw9Vn?ilymc" target="_blank">传奇时代</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/AF9AG?ygpdhygs" target="_blank">新境界影视</a> | <a href="https://d265ujbtchne9r.cloudfront.net/zqMQA?myjvel" target="_blank">文昭谈论</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/7?uutcrptg" target="_blank">明慧</a></p><p><a href="https://dlvlk7o3qgp9v.cloudfront.net/9?iciotb" target="_blank">大法</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/3?gwgme" target="_blank">新唐人</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/obAhT?fselqpe" target="_blank">人民报</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/xXNHu?zrbutpahw" target="_blank">放光明</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/5?phptv" target="_blank">新纪元</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/6?rjnlreu" target="_blank">希望之声</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/11?uxxws" target="_blank">无界网络</a> | <a href="https://d15m60lsma25jk.cloudfront.net/Pueji?jfpoy" target="_blank">追查国际</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/16?fwqxj" target="_blank">明慧之窗</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/LdvzZ?xrbbdxa" target="_blank">细语人生</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/fBn3r?qtrrn" target="_blank">新世纪影视</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/PUWMb?zibpz" target="_blank">江峰时刻</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/8?krmhhmk" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138104.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14138105-GettyImages-1653680515-320x200.jpg"><p align="center">印度成为日企投资新宠 中国名落第三</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138104.md#1" title="印度成为日企投资新宠 中国名落第三""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14138105-GettyImages-1653680515-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137925.md#1" title="白宫警告朝鲜 若发动攻击将致金氏政权终结""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/03/id13955594-000_33BN6RU-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137518.md#1" title="青年失业率被消失 大陆求职者露宿街头""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966487-000_338423Y1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137525.md#1" title="美驻华大使：对美中关系未来并不乐观""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/10/id13318039-GettyImages-802646042-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137767.md#1">岳山：中南海山头林立 中共核心危机将爆发</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135377.md#1">尽早买 6种Costco电子产品12月有超值优惠</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138127.md#1">寒冬山西一县已断电3天 近20万人受灾</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137767.md#1">岳山：中南海山头林立 中共核心危机将爆发</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135377.md#1">尽早买 6种Costco电子产品12月有超值优惠</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138127.md#1">寒冬山西一县已断电3天 近20万人受灾</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138104.md#1">印度成为日企投资新宠 中国名落第三</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138065.md#1">日本与马来西亚签署海上安全援助协议</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138065.md#1">日本与马来西亚签署海上安全援助协议</a><br>
 :clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14138017.md#1">巨债缠身 恒大亏本将上海“宝地”拱手让人</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a><br>
@@ -96,13 +96,13 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135598.md#1">疫情大爆发 中共催打国产疫苗引发质疑</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135122.md#1">【时事金扫描】泽连斯基访美 俄发动全线进攻</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135392.md#1">专家：四大经济败象凸显中共失执政基础</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1jzklplk5pcrz.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://61.228.197.193/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,210</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dcdy973yo2gon.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://124.8.173.27/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,210</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 423,538,058 人
+!共 423,539,387 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137908.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/03/373215-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137908.md#1">西方媒体人：中共活摘器官 西媒应登头版</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137444.md#1">【晚间新闻】遭港府悬赏通缉 许颖婷：坚持初心</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137013.md#1">中共公布新器官条例难圆谎 专家揭黑幕</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137034.md#1">继家人被威胁后 蔡慎坤员工也遭警察盘问</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136295.md#1">CECC主席写明信片 关注遭中共重判的牛腾宇</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135393.md#1">【晚间新闻】援乌经费告急 泽连斯基紧急访美</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137983.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14138064-GettyImages-1483151060-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137983.md#1">分析：中国资本外逃时代来临 中资也跑路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137980.md#1">中国千亿地产巨头泛海控股面临强制退市</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137967.md#1">甘肃一家医院拖欠员工15个月绩效工资</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137933.md#1">北京常住人口连续六年下降</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137946.md#1">中国恒大深夜公告 境外债务重组方案恐夭折</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137646.md#1">阿里拟减持3.9亿美元股份 小鹏汽车股价暴跌</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137767.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/02/id13560475-Forbidden-City-GettyImages-501955696-for-Selling-927-and-BW-686-1-320x200.jpeg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137767.md#1">岳山：中南海山头林立 中共核心危机将爆发</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137910.md#1">对抗中共胁迫 日本与东盟加强海上安全合作</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137725.md#1">台湾史研究讨论会 游锡堃：中共对台虎视眈眈</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136979.md#1">【环球直击】英美谴责港府通缉五港人 关切黎智英案</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137606.md#1">台军方：中共海南发射卫星 国军周密掌握动态</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137751.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137765-472b653bfa76acbbd035083f58aa804f-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137751.md#1">湖南百货市场起火 五层楼被烧 商家损失惨重</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137749.md#1">中国现中共病毒新变异株 将有新一轮感染高峰</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137697.md#1">最强寒潮来袭 中国二十余省分剧烈降温</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137522.md#1">非洲猪瘟未消散 中国北方疫情升温</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137480.md#1">北京地铁事故肇因引关注 国产信号系统遭质疑</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137919.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/03/id13952608-GettyImages-74216081-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137919.md#1">“养娃难可求助亲戚” 中国社科院专家催生惹议</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137924.md#1">江西一老人挖到百斤“亚洲人参”</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137766.md#1">商汤科技55岁创办人猝死 公司曾被美国制裁</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137666.md#1">小作文事件后 东方甄选CEO孙东旭被免职</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137323.md#1">安徽三岁半宝宝独自在家冲奶粉喝 引关注</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137353.md#1">亚裔妈妈把孩子关进笼子 在美国佛州被捕</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136191.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14136197-2312140216292378-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136191.md#1">双子座流星雨14日晚间登场 每小时约150颗</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134472.md#1">新生儿数量减少 湖南安徽等多地幼儿园关闭</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134392.md#1">国家地理评2024最佳旅游地 纽约台南上榜</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130883.md#1">台湾花莲秘境 美丽的拉索埃涌泉生态园区</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128083.md#1">北京等多地罕见现极光 气象局发布地磁暴预警</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125811.md#1">阿里云一个月内第二次服务中断 网络再度热议</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a><br>
